# job-dispatcher

./: CMakeLists.txt  README.md  main.cpp
include/: jobDispatcher.h  threadSafeQueue.h
src/: jobDispatcher.cpp
